2017-04-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.1.
	* version.ac: Adapted.

2017-04-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.0.
	* configure.ac (FILENAME_VERSION): no need to define for TL.
	* gregorio.test (gregorio): do not use $FILENAME_VERSION.
	* Makefile.am (bin_PROGRAMS): just "gregorio" (same as TL'16).
	(gregorio.log): likewise.

2017-04-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import gregorio-5.0.0-rc1.
	* configure.ac (FILENAME_VERSION): Gregorio developers seem to want to
	use FILENAME_VERSION postfix for the executable name in TeX Live 2017.
	* gregorio.test (gregorio): use $FILENAME_VERSION.
	* Makefile.am (bin_PROGRAMS): use $FILENAME_VERSION.

2017-03-27  Karl Berry  <karl@tug.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2016-09-29  Karl Berry  <karl@tug.org>

	* configure.ac (FILENAME_VERSION): no need to define for TL.
	* gregorio.test (gregorio): do not use $FILENAME_VERSION.
	* Makefile.am (bin_PROGRAMS): just "gregorio" (same as TL'16).
	(gregorio.log): likewise.

2016-09-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.2.0.
	* version.ac, configure.ac: Adapted.
	* gregorio.test: Change program name by
	gregorio=gregorio-$FILENAME_VERSION.

2016-08-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.2.0-rc3.
	* version.ac, configure.ac: Adapted.
	* Makefile.am: bin_PROGRAMS = gregorio-$(FILENAME_VERSION).

2016-07-15  Karl Berry  <karl@tug.org>

	* configure.ac (AC_CHECK_ALIGNOF): add.
	* gregorio-src/src/sha1.c (UNALIGNED_P): handle differently.
	For Mojca, 14 Jul 2016 13:35:25,
	https://github.com/gregorio-project/gregorio/pull/1186.

2016-05-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.4.
	* version.ac, configure.ac: Adapted.

2016-05-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.3.
	* version.ac, configure.ac: Adapted.

2016-05-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
