@@ -1,3 +1,7 @@
+2017-12-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	Import gregorio-5.0.2.
+
 2017-04-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	Import gregorio-5.0.1.
